fixed width for whiteboard, fix for matrix for column ordering, updated test

--- a/Server/bkr/server/static/css/job_matrix.css
+++ b/Server/bkr/server/static/css/job_matrix.css
@@ -27,6 +27,10 @@ outer-headers {
     text-align:left;
 }
 
+.whiteboard {
+    width:600px;
+}
+
 .matrix-header {
     background-color:#4F4F4F;
     color:#FFFFFF;
